[package]
name = "brdgme-db"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-std = { git = "https://github.com/brdgme/std.git" }
chrono = "*"
uuid = { version = "0.4.0", features = ["v4"] }
diesel = { version = "0.11.0", features = ["postgres", "uuid", "chrono"] }
diesel_codegen = { version = "0.11.0", features = ["postgres"] }