[package]
name = "brdgme-db"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]

[dependencies]
brdgme-std = { git = "https://github.com/brdgme/std.git" }
chrono = "*"
uuid = { version = "0.4.0", features = ["v4"] }
postgres = { version = "*", features = ["with-uuid", "with-chrono"] }
r2d2 = "*"
r2d2_postgres = "*"
error-chain = "*"